--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -58,6 +58,9 @@
 		display: block;
 	}
 }
+.header.fixed-top{
+	width: 100%;
+ }
 /*================================CUSTOM HEADER STYLE==========================================*/
 .bg-orange{
 	background: $bg-orange;
