--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -101,6 +101,9 @@ h3{
 h4{
 	font-size: 1.2rem;
 }
+body{
+	color: #333;
+}
 /*--------------footer-----------*/
 .footer {
 	padding: 20px 0 15PX;
