--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -1,3 +1,11 @@
+/*===================768px====================*/
+@media all and (max-width:1023px){
+	.tab-head ul .nav-link{
+		padding: 5px 10px;
+	}
+	
+}
+
 @media all and (max-width:767px){
 	.content {
 		padding-bottom: 35px;
@@ -57,6 +65,12 @@
 		h6{
 			font-size: 13px;
 			line-height: 1.4;
+		}
+	}
+	.tab-head ul{
+		padding-top: 30px;
+			.nav-link{
+			padding: 3px 7px;
 		}
 	}
 }
