--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -153,7 +153,7 @@ table.dataTable tfoot td {
 
 @media all and (max-width:767px) {
 	.table-responsive {
-		padding-top: 40px !important;
+//		padding-top: 40px !important;
 	}
 }
 
