--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -3,10 +3,16 @@
 	.tab-head ul .nav-link{
 		padding: 5px 10px;
 	}
-	
+	ul.breadcrumb li a{
+		font-size: inherit;
+	}
 }
 
 @media all and (max-width:767px){
+	/*==========GLOBAL STYLE=========*/
+	body{
+		font-size: 13px;
+	}
 	.container{
 		padding-left: 10px;
 		padding-right: 10px;
@@ -15,21 +21,21 @@
 		padding-bottom: 35px;
 	}
 	h1{
-		font-size: 1.8rem;
-	}
-	h2{
 		font-size: 1.5rem;
 	}
-	h3{
+	h2{
 		font-size: 1.2rem;
 	}
-	h4{
+	h3{
 		font-size: 1rem;
+	}
+	h4{
+		font-size: .95rem;
 	}
 	.pdt{
 		padding-top: 66px;
 	}
-	
+	/*===========================*/
 	.logo{
 		width: 50px;
 		height: 50px;
@@ -80,6 +86,7 @@
 	.tab-content{
 		padding-left: 10px !important;
 		padding-right: 10px !important;
+		font-size: 13px;
 	}
 	#accordion-style-1 .card-body{
 		padding-left: 10px;
@@ -87,5 +94,11 @@
 	}
 	.dataTable{
 		font-size: 13px;
+	}
+	#brainstrom,#tell-teacher,#find-out{
+		ul,ol{
+			list-style:disc;
+			padding-left: 10px;
+		}
 	}
 }
