word and other and css+

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -722,8 +722,7 @@ table {
     padding: 5px 35px;
     color: #fff;
     text-align: center;
-    font-size: 1rem;
-    width: 250px; }
+    font-size: 1rem; }
 .chap-header h1 {
   font-size: 22px; }
 
