--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -829,13 +829,22 @@ table {
   list-style: disc; }
 
 /*=============================IMPORT RESPONSIVE CSS===============================*/
-/*===================768px====================*/
+/*===================992px====================*/
 @media all and (max-width: 1023px) {
   .tab-head ul .nav-link {
     padding: 5px 10px; }
 
   ul.breadcrumb li a {
     font-size: inherit; } }
+/*===================768px====================*/
+@media all and (max-width: 991px) {
+  .card [class*="card-header-"] {
+    margin: 0px 5px 0; }
+
+  .wrapper-card .card-title {
+    font-size: 40px; }
+  .wrapper-card .card [class*="card-header-"] .card-icon, .wrapper-card .card [class*="card-header-"] .card-text {
+    padding: 10px; } }
 @media all and (max-width: 767px) {
   /*==========GLOBAL STYLE=========*/
   body {
