--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -1,4 +1,4 @@
-/*===================768px====================*/
+/*===================992px====================*/
 @media all and (max-width:1023px){
 	.tab-head ul .nav-link{
 		padding: 5px 10px;
@@ -7,6 +7,21 @@
 		font-size: inherit;
 	}
 }
+/*===================768px====================*/
+@media all and (max-width:991px){
+	.card [class*="card-header-"] {
+		margin: 0px 5px 0;
+	 }
+	.wrapper-card{
+		.card-title{
+			font-size: 40px;
+		}
+		.card [class*="card-header-"] .card-icon, .card [class*="card-header-"] .card-text{
+			padding: 10px; 	
+		}
+	}
+}
+
 
 @media all and (max-width:767px){
 	/*==========GLOBAL STYLE=========*/
