--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,8 +68,9 @@ h3 {
 h4 {
   font-size: 1.2rem; }
 
-body {
-  color: #333; }
+body, html {
+  color: #333;
+  overflow-x: hidden; }
 
 /*--------------footer-----------*/
 .footer {
@@ -234,10 +235,13 @@ input[disabled] {
           .side-panel #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
             display: block; } }
 .side-panel .tab-content > .tab-pane {
+  display: none; }
+.side-panel .tab-content > .active {
   display: block; }
 
 .header.fixed-top {
-  width: 100%; }
+  width: 100%;
+  right: auto; }
 
 /*================================CUSTOM HEADER STYLE==========================================*/
 .bg-orange {
@@ -848,6 +852,9 @@ table {
   min-width: 200px; }
   #question-bank .nav-link.btn + .nav-link.btn {
     margin-left: 30px; }
+
+.card-header h3 {
+  color: #333; }
 
 /*=============================IMPORT RESPONSIVE CSS===============================*/
 /*===================992px====================*/
