--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,6 +238,8 @@ input[disabled] {
   display: none; }
 .side-panel .tab-content > .active {
   display: block; }
+.side-panel .tab-content {
+  border: 0 none; }
 
 .header.fixed-top {
   width: 100%;
@@ -517,7 +519,6 @@ table {
 /* ========================== Card ======================== */
 .card {
   background: #fff;
-  font-size: .875rem;
   border: 0;
   margin-bottom: 15px;
   color: #333333;
@@ -750,12 +751,12 @@ table {
       background: rgba(60, 39, 39, 0.7);
       color: #fff; }
   .tab-head ul .nav-item {
-    border: 0 none;
-    margin: 0; }
+    border: 0 none; }
+    .tab-head ul .nav-item + .nav-item {
+      margin-left: 1px; }
   .tab-head ul .nav-item.active a {
     background: rgba(60, 39, 39, 0.7);
-    color: #fff;
-    margin-right: 1px; }
+    color: #fff; }
   @media all and (max-width: 767px) {
     .tab-head ul {
       display: block; }
@@ -856,6 +857,12 @@ table {
 .card-header h3 {
   color: #333; }
 
+table.dataTable thead .sorting_asc {
+  background: transparent; }
+
+#myform {
+  margin: 0; }
+
 /*=============================IMPORT RESPONSIVE CSS===============================*/
 /*===================992px====================*/
 @media all and (max-width: 1023px) {
@@ -884,9 +891,8 @@ table {
   body {
     font-size: 13px; }
 
-  .container {
-    padding-left: 10px;
-    padding-right: 10px; }
+  .header .container {
+    max-width: auto; }
 
   .content {
     padding-bottom: 35px; }
