--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -252,7 +252,7 @@ table {
 
 .card {
 	background: #fff;
-	font-size: .875rem;
+	//font-size: .875rem;
 	border: 0;
 	margin-bottom:15px;
 	//margin-top: 20px;
@@ -532,13 +532,12 @@ table {
 	padding-top: 50px;
 	border-bottom: 3px solid $bg-tr-black;
 
-	.nav-link {
+	.nav-link{
 		color: $bg-l-black;
 		padding: 5px 25px;
 		border: 0 none;
 		@include transition(0.4s);
-
-		&:hover {
+        &:hover {
 			background: $bg-tr-black;
 			color: #fff;
 		}
@@ -546,14 +545,13 @@ table {
 
 	.nav-item {
 		border: 0 none;
-		margin: 0;
+ 		&+.nav-item{margin-left: 1px;}
 	}
 
 	.nav-item.active a {
 		background: $bg-tr-black;
 		color: #fff;
-		margin-right: 1px;
-	}
+ 	}
 
 	@media all and (max-width:767px) {
 		display: block;
@@ -565,10 +563,8 @@ table {
 		.nav-item {
 			display: inline-block;
 		}
-
 	}
 }
-
 .tab-content {
 	border: 1px solid $bg-tr-black2;
 	min-height: 325px;
@@ -654,6 +650,12 @@ table {
 }
 .card-header h3{
 	color: #333; 	
+}
+table.dataTable thead .sorting_asc{
+	background: transparent;
+}
+#myform{
+	margin: 0;
 }
 /*=============================IMPORT RESPONSIVE CSS===============================*/
 
