--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -124,4 +124,13 @@
 			padding-left: 10px;
 		}
 	}
+	.breadcrumb-wrap{
+		padding:4px 10px;
+		ul.breadcrumb{
+			padding: 0;
+			li + li:before{
+				padding: 5px;
+			}
+		}
+	}
 }
