--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,17 +158,17 @@ ul.breadcrumb li + li:before {
 input[disabled] {
   cursor: not-allowed; }
 
-::-webkit-scrollbar {
-  width: 5px; }
+@media all and (min-width: 768px) {
+  ::-webkit-scrollbar {
+    width: 5px; }
 
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 10px; }
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px; }
 
-::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
-
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); } }
 .hr-style {
   position: relative; }
   .hr-style:before {
@@ -245,10 +245,6 @@ input[disabled] {
   display: block; }
 .side-panel .tab-content {
   border: 0 none; }
-
-.header.fixed-top {
-  width: 100%;
-  right: auto; }
 
 /*================================CUSTOM HEADER STYLE==========================================*/
 .bg-orange {
