--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -221,18 +221,20 @@ input[disabled] {
 }
 
 //---------------- Scroll Stylr -----------
-::-webkit-scrollbar {
-	width: 5px;
-}
+@media all and (min-width:768px){
+	::-webkit-scrollbar {
+		width: 5px;
+	}
 
-::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	border-radius: 10px;
-}
+	::-webkit-scrollbar-track {
+		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		border-radius: 10px;
+	}
 
-::-webkit-scrollbar-thumb {
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+	::-webkit-scrollbar-thumb {
+		border-radius: 10px;
+		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+	}
 }
 
 //--------------------table line------------
