some fixes in css+++

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -651,9 +651,9 @@ table {
 .card-header h3{
 	color: #333; 	
 }
-table.dataTable thead .sorting_asc{
-	background: transparent;
-}
+//table.dataTable thead .sorting_asc{
+//	background: transparent;
+//}
 #myform{
 	margin: 0;
 }
