--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -433,8 +433,8 @@ table.dataTable thead th,
 table.dataTable thead td,
 table.dataTable tfoot th,
 table.dataTable tfoot td {
-  border-bottom: 1px solid #af380b;
-  border-top: 1px solid #af380b; }
+  border-bottom: 1px solid rgba(60, 39, 39, 0.7);
+  border-top: 1px solid rgba(60, 39, 39, 0.7); }
 
 select {
   width: 100%;
@@ -858,8 +858,14 @@ table {
 .card-header h3 {
   color: #333; }
 
+.dataTables_wrapper {
+  border: 1px solid #ddd;
+  padding: 5px 0; }
+  .dataTables_wrapper .dt-buttons, .dataTables_wrapper .dataTables_filter {
+    margin: 0 5px; }
+
 #myform {
-  margin: 0; }
+  margin: 0 !important; }
 
 /*=============================IMPORT RESPONSIVE CSS===============================*/
 /*===================992px====================*/
