--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -867,6 +867,12 @@ table {
 #myform {
   margin: 0 !important; }
 
+table.dataTable thead .sorting_asc {
+  background-image: url(../images/sort_both.png); }
+
+table.dataTable thead .sorting_desc {
+  background-image: url(../images/sort_both.png); }
+
 /*=============================IMPORT RESPONSIVE CSS===============================*/
 /*===================992px====================*/
 @media all and (max-width: 1023px) {
