--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -661,6 +661,13 @@ table {
 #myform{
 	margin: 0 !important;
 }
+ 
+table.dataTable thead .sorting_asc {
+	background-image: url(../images/sort_both.png);
+}
+table.dataTable thead .sorting_desc {
+	background-image: url(../images/sort_both.png);
+}
 /*=============================IMPORT RESPONSIVE CSS===============================*/
 
 @import "responsive.scss";
