--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -668,6 +668,22 @@ table.dataTable thead .sorting_asc {
 table.dataTable thead .sorting_desc {
 	background-image: url(../images/sort_both.png);
 }
+#question-bank .nav-link.input-btn{
+	padding: 7px 20px;
+	//margin-top: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 /*=============================IMPORT RESPONSIVE CSS===============================*/
 
 @import "responsive.scss";
