--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -672,6 +672,9 @@ table.dataTable thead .sorting_desc {
 	padding: 7px 20px;
 	//margin-top: 10px;
 }
+.dataTables_info{
+	padding-left: 5px;	
+}
 
 
 
