--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -675,7 +675,9 @@ table.dataTable thead .sorting_desc {
 .dataTables_info{
 	padding-left: 5px;	
 }
-
+a.btn{
+	-webkit-appearance: inherit;
+}
 
 
 
