--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -871,10 +871,12 @@ table {
   margin: 0 !important; }
 
 table.dataTable thead .sorting_asc {
-  background-image: url(../images/sort_both.png); }
+  background-image: url(../images/sort_both.png);
+  background-image: none; }
 
 table.dataTable thead .sorting_desc {
-  background-image: url(../images/sort_both.png); }
+  background-image: url(../images/sort_both.png);
+  background-image: none; }
 
 #question-bank .nav-link.input-btn {
   padding: 7px 20px; }
