--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -664,9 +664,11 @@ table {
  
 table.dataTable thead .sorting_asc {
 	background-image: url(../images/sort_both.png);
+	background-image:none;
 }
 table.dataTable thead .sorting_desc {
 	background-image: url(../images/sort_both.png);
+	background-image:none;
 }
 #question-bank .nav-link.input-btn{
 	padding: 7px 20px;
