--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -276,6 +276,9 @@ input[disabled] {
 	padding: 7px 20px;	
 }
 /*-----------------Table responsive--------------*/
-.dataTables_wrapper{
-	min-width: 800px;
+.table-responsive{
+	overflow-x: scroll;
+	>*{
+		min-width: 800px;	
+	}
 }
