--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -31,9 +31,11 @@
 		top: 15px;
 	}
 }
+
 .content {
 	padding-bottom: 45px;
 }
+
 @media all and (min-width:768px) {
 	.h-effcts > li > a {
 		position: relative;
@@ -142,8 +144,9 @@ table.dataTable tfoot th {
 .dashboard-bg {
 	background: #ccc;
 }
-#dashboard{
-	.card-header{
+
+#dashboard {
+	.card-header {
 		@include shadow(none);
 	}
 }
@@ -158,7 +161,7 @@ table.dataTable tfoot td {
 
 @media all and (max-width:767px) {
 	.table-responsive {
-//		padding-top: 40px !important;
+		//		padding-top: 40px !important;
 	}
 }
 
@@ -254,7 +257,7 @@ table {
 	background: #fff;
 	//font-size: .875rem;
 	border: 0;
-	margin-bottom:15px;
+	margin-bottom: 15px;
 	//margin-top: 20px;
 	color: #333333;
 	width: 100%;
@@ -419,7 +422,7 @@ table {
 /*# sourceMappingURL=style.css.map */
 
 .wrapper-card {
-	background:  $bg-l-gray;
+	background: $bg-l-gray;
 	margin-bottom: 2px;
 
 	* {
@@ -447,8 +450,8 @@ table {
 
 /*============Content Page=============*/
 .content-page {
-     .chapter-list {
-		 
+	.chapter-list {
+
 		margin-bottom: 10px;
 
 		li {
@@ -471,23 +474,25 @@ table {
 				margin-right: 15px;
 			}
 		}
-        >[class^="col-"]{
+
+		> [class^="col-"] {
 			padding-top: 10px;
 			padding-bottom: 10px;
-			@media all and (max-width:767px){
+
+			@media all and (max-width: 767px) {
 				padding-left: 5px;
 				padding-right: 3px;
 				font-size: 13px;
 			}
 		}
-	 }
+	}
 
 	h1 {
 		text-align: center;
 		margin-bottom: 0;
 	}
 
-    .chapter-list .col-md-2 {
+	.chapter-list .col-md-2 {
 		border-right: 2px solid $bg-tr-black;
 	}
 }
@@ -501,7 +506,7 @@ table {
 	border-bottom: 3px solid $bg-tr-black;
 
 	h4 {
- 		margin-bottom: 0;
+		margin-bottom: 0;
 	}
 }
 
@@ -512,7 +517,8 @@ table {
 	.unit {
 		margin: 0 auto 10px;
 		text-align: center;
-		.bg-set{
+
+		.bg-set {
 			display: inline-block;
 			background: $bg-l-black;
 			border: 1px solid $bg-l-black;
@@ -520,7 +526,7 @@ table {
 			color: #fff;
 			text-align: center;
 			font-size: 1rem;
- 		}
+		}
 	}
 
 	h1 {
@@ -532,12 +538,13 @@ table {
 	padding-top: 50px;
 	border-bottom: 3px solid $bg-tr-black;
 
-	.nav-link{
+	.nav-link {
 		color: $bg-l-black;
 		padding: 5px 25px;
 		border: 0 none;
 		@include transition(0.4s);
-        &:hover {
+
+		&:hover {
 			background: $bg-tr-black;
 			color: #fff;
 		}
@@ -545,13 +552,16 @@ table {
 
 	.nav-item {
 		border: 0 none;
- 		&+.nav-item{margin-left: 1px;}
+
+		& + .nav-item {
+			margin-left: 1px;
+		}
 	}
 
 	.nav-item.active a {
 		background: $bg-tr-black;
 		color: #fff;
- 	}
+	}
 
 	@media all and (max-width:767px) {
 		display: block;
@@ -565,6 +575,7 @@ table {
 		}
 	}
 }
+
 .tab-content {
 	border: 1px solid $bg-tr-black2;
 	min-height: 325px;
@@ -603,38 +614,50 @@ table {
 	border-bottom-right-radius: 7px;
 	display: block;
 }
-#accordion-style-1 .btn-link{
+
+#accordion-style-1 .btn-link {
 	padding-left: 0;
 }
 
-.card-header{
-	.collapsed.btn i.fa{
+.card-header {
+	.collapsed.btn i.fa {
 		@include transform(rotate(0));
 		@include transition(0.4s);
 	}
-	.btn i.fa{
+
+	.btn i.fa {
 		@include transition(0.4s);
 		@include transform(rotate(90deg));
 	}
-	
+
 }
-.accordion .card .card-header{@include shadow(0 0 3px .5px rgba(0,0,0,0.3))}
-#brainstrom,#tell-teacher,#find-out{
-	ul,ol{
-		list-style:disc;
+
+.accordion .card .card-header {
+	@include shadow(0 0 3px .5px rgba(0, 0, 0, 0.3))
+}
+
+#brainstrom,
+#tell-teacher,
+#find-out {
+
+	ul,
+	ol {
+		list-style: disc;
 	}
 }
 
 
-#question-bank{
-	.card-header{
+#question-bank {
+	.card-header {
 		padding: 50px 5px 10px;
-		.card-icon{
+
+		.card-icon {
 			padding: 10px 5px;
 			margin-top: -60px;
 		}
 	}
-	.nav-link.btn{
+
+	.nav-link.btn {
 		background: $bg-tr-black;
 		padding: 15px 25px;
 		border: 1px solid $bg-l-black;
@@ -643,44 +666,61 @@ table {
 		margin-bottom: 15px;
 		display: inline-block;
 		min-width: 200px;
-		&+.nav-link.btn{
+
+		& + .nav-link.btn {
 			margin-left: 30px;
 		}
 	}
 }
-.card-header h3{
-	color: #333; 	
+
+.card-header h3 {
+	color: #333;
 }
-.dataTables_wrapper{
-	border:1px solid $bg-l-gray;
-	padding:5px 0;
-	.dt-buttons,.dataTables_filter{
-		margin:0 5px;
+
+.dataTables_wrapper {
+	border: 1px solid $bg-l-gray;
+	padding: 5px 0;
+
+	.dt-buttons,
+	.dataTables_filter {
+		margin: 0 5px;
 	}
 }
-#myform{
+
+#myform {
 	margin: 0 !important;
 }
- 
+
 table.dataTable thead .sorting_asc {
 	background-image: url(../images/sort_both.png);
-	background-image:none;
+	background-image: none;
 }
+
 table.dataTable thead .sorting_desc {
 	background-image: url(../images/sort_both.png);
-	background-image:none;
+	background-image: none;
 }
-#question-bank .nav-link.input-btn{
+
+#question-bank .nav-link.input-btn {
 	padding: 7px 20px;
 	//margin-top: 10px;
 }
-.dataTables_info{
-	padding-left: 5px;	
+
+.dataTables_info {
+	padding-left: 5px;
 }
-a.btn{
+
+a.btn {
 	-webkit-appearance: inherit;
 }
 
+select.models {
+	display: none;
+}
+
+select.models.active {
+	display: inline-block;
+}
 
 
 
