--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -277,7 +277,7 @@ input[disabled] {
 }
 /*-----------------Table responsive--------------*/
 .table-responsive{
-	overflow-x: scroll;
+	overflow-x: auto;
 	>*{
 		min-width: 800px;	
 	}
