--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -1,3 +1,10 @@
+/*===================1024px====================*/
+@media all and (max-width:1199px){
+	form{
+		font-size: 13.5px;
+	}
+}
+ 
 /*===================992px====================*/
 @media all and (max-width:1023px){
 	.tab-head ul .nav-link{
