--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -173,7 +173,7 @@ select {
 	border: 1px solid #ced4da;
 	color: #495057;
 	height: calc(2.25rem + 2px);
-	padding: .375rem .75rem;
+	padding: .375rem .10px .375rem 5px;
 	@include radius(.25rem);
 	color: #495057;
 
