--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -1,106 +1,164 @@
-.side-panel{
+.side-panel {
 	#sideNav {
-	  .navbar-nav .nav-item .nav-link {
-		font-weight: 800;
-		letter-spacing: 0.05rem;
-		text-transform: uppercase;
-	  }
-	  .navbar-toggler {
-		&:focus {
-		  outline-color: lighten($primary, 15%);
+		.navbar-nav .nav-item .nav-link {
+			font-weight: 800;
+			letter-spacing: 0.05rem;
+			text-transform: uppercase;
 		}
-	  }
+
+		.navbar-toggler {
+			&:focus {
+				outline-color: lighten($primary, 15%);
+			}
+		}
 	}
-    @media (min-width: 992px) {
-	  #sideNav {
-		text-align: center;
-		position: fixed;
-		top: 0;
-		left: 0;
-        display: flex;
-		flex-direction: column;
 
-		width: $sidebar-base-width;
-		height: 100vh;
-		.navbar-brand {
-		  display: flex;
-
-		  margin: auto auto 0;
-		  padding: 0.5rem;
-		  .img-profile {
-			max-width: 10rem;
-			max-height: 10rem;
-			border: 0.5rem solid fade-out($white, 0.8);
-		  }
-		}
-		.navbar-collapse {
-		  display: flex;
-		  align-items: flex-start;
-		  flex-grow: 0;
-
-		  width: 100%;
-		  margin-bottom: auto;
-		  .navbar-nav {
+	@media (min-width: 992px) {
+		#sideNav {
+			text-align: center;
+			position: fixed;
+			top: 0;
+			left: 0;
+			display: flex;
 			flex-direction: column;
 
-			width: 100%;
-			.nav-item {
-			  display: block;
-			  .nav-link {
-				display: block;
-			  }
+			width: $sidebar-base-width;
+			height: 100vh;
+
+			.navbar-brand {
+				display: flex;
+
+				margin: auto auto 0;
+				padding: 0.5rem;
+
+				.img-profile {
+					max-width: 10rem;
+					max-height: 10rem;
+					border: 0.5rem solid fade-out($white, 0.8);
+				}
 			}
-		  }
+
+			.navbar-collapse {
+				display: flex;
+				align-items: flex-start;
+				flex-grow: 0;
+
+				width: 100%;
+				margin-bottom: auto;
+
+				.navbar-nav {
+					flex-direction: column;
+
+					width: 100%;
+
+					.nav-item {
+						display: block;
+
+						.nav-link {
+							display: block;
+						}
+					}
+				}
+			}
 		}
-	  }
 	}
-	.tab-content>.tab-pane {
+
+	.tab-content > .tab-pane {
 		display: none;
 	}
-	.tab-content>.active {
+
+	.tab-content > .active {
 		display: block;
 	}
-	.tab-content{
+
+	.tab-content {
 		border: 0 none;
 	}
 }
- 
+
 /*================================CUSTOM HEADER STYLE==========================================*/
-.bg-orange{
+.bg-orange {
 	background: $bg-orange;
-	*,*:hover{
+
+	*,
+	*:hover {
 		color: $white;
 	}
-	a:hover{
+
+	a:hover {
 		//background: $bg-d-orange;	
 	}
-	.nav-link{
+
+	.nav-link {
 		text-transform: uppercase;
 	}
 }
-.logo{
+
+.logo {
 	width: 75px;
 	height: 75px;
 	@include radius(50%);
 	overflow: hidden;
 	padding: 2px;
 	border: 1px solid $white;
-	img{
+
+	img {
 		max-width: 100%;
 		@include radius(50%);
 		display: block;
 	}
 }
+
 .menu-btn {
-    background-color: transparent;
+	background-color: transparent;
 	display: none;
-	@media all and (max-width:767px){
+
+	@media all and (max-width: 767px) {
 		display: block;
 	}
-    color: #fff;
-    border:0 none;
-    font-size: 22px; 
-	&:focus{outline: 0 none;}
+
+	color: #fff;
+	border:0 none;
+	font-size: 22px;
+
+	&:focus {
+		outline: 0 none;
+	}
 }
 
- 
+.header * {
+	@include transition(all .2s ease);
+}
+
+.h-sticky {
+	* {
+		@include transition(all .2s ease);
+	}
+
+	.logo {
+		width: 45px;
+		height: 45px;
+	}
+
+	.navbar {
+		padding-top: 5px;
+		padding-bottom: 5px;
+	}
+
+	& + .content {
+		.breadcrumb-wrap {
+			top: 55px;
+			padding-top: 4px;
+			padding-bottom: 4px;
+		}
+	}
+}
+
+.breadcrumb-wrap {
+
+	position: fixed;
+	width: 100%;
+	top: 91px;
+	z-index: 5;
+	@include transition(all .2s ease);
+}
