--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -36,6 +36,9 @@
  			}
 		}
 	}
+	ul.breadcrumb li + li:before {
+		padding: 5px 4px;
+    }
 }
 
 
@@ -63,7 +66,7 @@
 		font-size: .95rem;
 	}
 	.pdt{
-		padding-top: 66px;
+		padding-top: 115px;
 	}
 	/*===========================*/
 	.logo{
@@ -133,6 +136,7 @@
 	}
 	.breadcrumb-wrap{
 		padding:4px 10px;
+		top: 65px;
 		ul.breadcrumb{
 			padding: 0;
 			li + li:before{
