--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1154,13 +1154,117 @@ select.models.active {
     height: 1px;
     background: #ccc;
     bottom: 0; }
-.student-list input[type=checkbox]:after, .student-list input[type=checkbox]:before {
+.student-list input[type=checkbox]:after,
+.student-list input[type=checkbox]:before {
   left: 2px; }
 .student-list input[type=checkbox]:before {
   left: 4px; }
 
 .e-sel-header {
   min-height: 76px; }
+
+/*---------------card-overlay------------------*/
+.card-overlay {
+  position: relative; }
+  .card-overlay > a {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bootom: 100%;
+    background: rgba(60, 39, 39, 0.8);
+    height: 0%;
+    color: #fff;
+    font-size: 25px;
+    text-decoration: none;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    -webkit-transition: height 0.3s;
+    -moz-transition: height 0.3s;
+    -ms-transition: height 0.3s;
+    -o-transition: height 0.3s;
+    transition: height 0.3s;
+    flex-direction: column;
+    bottom: 50%; }
+    .card-overlay > a:last-child {
+      top: 50%;
+      border-bottom: 0 none; }
+      .card-overlay > a:last-child:after {
+        content: '';
+        position: absolute;
+        width: 0;
+        left: 10%;
+        right: 10%;
+        height: 2px;
+        background: #fff;
+        -webkit-transition: 0.5s;
+        -moz-transition: 0.5s;
+        -ms-transition: 0.5s;
+        -o-transition: 0.5s;
+        transition: 0.5s;
+        top: 0%;
+        margin: 0 auto;
+        pointer-events: none; }
+  .card-overlay:hover a:after {
+    width: 80%; }
+  .card-overlay:hover > a {
+    height: 50%; }
+  .card-overlay:before {
+    content: '';
+    position: absolute;
+    pointer-events: none;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    top: 50%;
+    margin: 0 auto;
+    height: 0;
+    border-left: 2px solid #fff;
+    z-index: 2;
+    -webkit-transition: 0.3s 0.3s;
+    -moz-transition: 0.3s 0.3s;
+    -ms-transition: 0.3s 0.3s;
+    -o-transition: 0.3s 0.3s;
+    transition: 0.3s 0.3s;
+    border-right: 2px solid #fff; }
+  .card-overlay:hover:before {
+    top: 10px;
+    height: calc(100% - 20px); }
+  .card-overlay:after {
+    content: '';
+    position: absolute;
+    border-top: 2px solid #fff;
+    z-index: 2;
+    -webkit-transition: 0.3s 0.3s;
+    -moz-transition: 0.3s 0.3s;
+    -ms-transition: 0.3s 0.3s;
+    -o-transition: 0.3s 0.3s;
+    transition: 0.3s 0.3s;
+    border-bottom: 2px solid #fff;
+    left: 50%;
+    bottom: 10px;
+    pointer-events: none;
+    top: 10px;
+    width: 0; }
+  .card-overlay:hover:after {
+    left: 10px;
+    width: calc(100% - 20px); }
+
+.card-title2 {
+  padding: 60px 0 0px; }
+
+.card-stats {
+  min-height: 150px; }
+
+.click-here {
+  font-size: 14px;
+  text-align: center;
+  color: #fff; }
 
 /*=============================IMPORT RESPONSIVE CSS===============================*/
 /*===================1024px====================*/
