css img path chages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1476,7 +1476,7 @@ select.models.active {
   padding: 15px; }
 
 .que-bg {
-  background: url(assets/img/question-bg.jpg) no-repeat bottom left;
+  background: url(../img/question-bg.jpg) no-repeat bottom left;
   -webkit-background-size: cover;
   background-size: cover;
   position: relative;
