--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1141,7 +1141,7 @@ select.models.active {
 }
 
 .que-bg {
-	background: url(assets/img/question-bg.jpg) no-repeat bottom left;
+	background: url(../img/question-bg.jpg) no-repeat bottom left;
 	-webkit-background-size: cover;
 	background-size: cover;
 	position: relative;
